--- a/package.json
+++ b/package.json
@@ -3,21 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mieuteacher/meomeojs": "^1.1.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mieuteacher/meomeojs": "^1.1.3",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.6",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.6.3",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "concurrently": "^8.2.0",
     "craco": "^0.0.3",
+    "crypto-js": "^4.1.1",
     "json-server": "^0.17.3",
+    "mdb-react-ui-kit": "^6.1.0",
+    "mdbreact": "^5.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "sass": "^1.63.6",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
